# esp32-moisture-soil-sensor

./: .gitignore  CMakeLists.txt  README.md  moisture_sensor.c  yl69.c
components/moisture_sensor/: CMakeLists.txt  README.md  moisture_sensor.c
components/server/: CMakeLists.txt  index.html  server.c
components/server/include/: server.h
components/wifi/: CMakeLists.txt  wifi.c
components/wifi/include/: wifi.h
include/: yl69.h
main/: CMakeLists.txt  Kconfig.projbuild  humidity_monitoring_server.c  index.html
